--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^4.16.3",
     "axios": "^0.21.1",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "micro-cors": "^0.1.1",
     "mongodb": "^3.6.9"
   },
